<resources>
    <string name="app_name">Suvlas</string>
    <string name="facebook_app_id">258071991330000</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="email">Email</string>
    <string name="datebirth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="or">Or</string>
    <string name="signwith_fb">SIGN IN </string>
    <string name="with_fb">WITH FACEBOOK</string>
    <string name="with_instagram">WITH INSTAGRAM</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="signup">Sign Up</string>
    <string name="backtosign">BACK TO SIGN IN</string>
    <string name="reward">REWARD</string>
    <string name="enfpoints">Scan Code</string>
    <string name="offertext1">$3 off Yeero after 3PM</string>
    <string name="expiredate1">Expire 25/10/2016  | Code 2506</string>
    <string name="offertext2">Birthday Reward Available</string>
    <string name="expiredate2">Expire 02/12/2016</string>
    <string name="scan_code">SCAN CODE</string>
    <string name="goldstatus">GOLD STATUS</string>
    <string name="silver_status">SILVER STATUS</string>
    <string name="bronze_status">BRONZE STATUS</string>
    <string name="since">SINCE 03 15 2016</string>
    <string name="pointreward">125 points until your next special reward</string>
    <string name="pointhour">S points may take 24 hour to appear</string>
    <string name="mycard">MYCARDS</string>
    <string name="last_purchase">LAST PURCHASE 06 AGO 2016</string>
    <string name="expire_ago">EXPIRES 26 AGO 2016</string>
    <string name="Manage">Manage</string>
    <string name="Pay">Pay</string>
    <string name="usecode">Use this code if scanner does not work properly</string>
    <string name="points_may">5 points may take 24 hours to appear</string>
    <string name="refresh">Refresh</string>
    <string name="location">Locations</string>
    <string name="avile_rest">Available Restaurants 01</string>
    <string name="message">MESSAGE</string>
    <string name="remainmsgtext">You have 02 new messages</string>
    <string name="msg_descrin">Happy Birthday John!</string>
    <string name="number">215</string>
    <string name="suvlaspoint">Suvlas Points</string>
    <string name="manage">MANAGE</string>
    <string name="pay">PAY</string>
    <string name="store_title">STORE</string>
    <string name="stores">STORES</string>
    <string name="search">Search Stores</string>
    <string name="gift">GIFT</string>
    <string name="gift_title">GIFT</string>
    <string name="order">ORDER</string>
    <string name="welcome">WELCOME</string>
    <string name="history">HISTORY</string>
    <string name="setting">SETTINGS</string>
    <string name="available">Available in this card</string>
    <string name="trasferblnc">Transfer balance</string>
    <string name="autoreload">Auto Reload</string>
    <string name="reload">Reload</string>
    <string name="selectamount">Select a reload amount</string>
    <string name="ceditard">Credit / Debit Card</string>
    <string name="cardholdername">Cardholder Name</string>
    <string name="edt_cardnumber">Card number        </string>
    <string name="securitycode">Security Code</string>
    <string name="exp_date">Expiration date</string>
    <string name="year">Year</string>
    <string name="procced">Proceed</string>
    <string name="transaction">TRANSACTION</string>
    <string name="loyaltyapp">Suvlas Loyalty App</string>
    <string name="user_name">User Name</string>
    <string name="cardnumber">CARD NUMBER</string>
    <string name="item">ITEM</string>
    <string name="amount">AMMOUNT</string>
    <string name="approved">Approved</string>
    <string name="itbms">ITBMS</string>
    <string name="payamount2">$1.75</string>
    <string name="ordertotal">Order Total</string>
    <string name="payamount3">$26.75</string>
    <string name="continuebtn">Continue</string>
    <string name="username">John Doe</string>
    <string name="octdate">25 october 2016-8:32 am</string>
    <string name="nonautoreload">Non auto-reload</string>
    <string name="payamount">$ 25.00</string>
    <string name="card">******1235</string>
    <string name="SETTING">SETTINGS</string>
    <string name="logout">LOG OUT</string>
    <string name="loyalto">Loyal to SUVLAS since September 2016</string>
    <string name="currentlocation">Current Location</string>
    <string name="generaloption">General options</string>
    <string name="gps_navi">GPS navigation</string>
    <string name="show_notificn">Do you want to receive notifications?</string>
    <string name="auto_redem">Auto-Redeem</string>
    <string name="detect">Detect movement</string>
    <string name="managepay">25.22</string>
    <string name="usd">USD</string>
    <string name="barcodecode">0000045415</string>
    <string name="spoint">S points take 24 hours to appear</string>
    <string name="reload_pay1">$5</string>
    <string name="reload_pay2">$10</string>
    <string name="reload_pay3">$15</string>
    <string name="reload_pay4">$20</string>
    <string name="reload_pay5">$25</string>
    <string name="reload_pay6">$25.00</string>
    <string name="balance">Balance-$</string>
    <string name="as">as of</string>
    <string name="card2">******5415</string>
    <string name="selectdesign">Select the gift card design</string>
    <string name="selectgiftcardamt">Select the gift card ammount</string>
    <string name="selectwalletamt">Select the Wallet ammount</string>
    <string name="deliverymethod">Select a delivery method</string>
    <string name="deliveryinfo">Insert delivery information</string>
    <string name="to">Email</string>
    <string name="form">Form</string>
    <string name="name">Name</string>
    <string name="messagesmall">Message</string>
    <string name="giftcarddetail">Gift card details</string>
    <string name="Toname">Amy Smith</string>
    <string name="mail">amy_2508@gmail.com</string>
    <string name="amountrs">25 UD</string>
    <string name="msgdescription">lorem ipsum dolor sit amet,consecteture adipiscing elit,sed to eiusmod tempor incididunt ut labore et dolore magna aliqua </string>
    <string name="transferbalance">TRANSFERBALANCE</string>
    <string name="confirm_order">CONFIRM ORDER</string>
    <string name="our_suvlas_team">Our SUVLAS team will have your order at your selected pickup store.</string>
    <string name="action_settings">setting</string>
    <string name="rewardbonus">Reward Bonus</string>
    <string name="get_extra_bonus">You will get an extras bonus x3 on the points earned during the next 12 hours form.</string>
    <string name="greekweek">Greek Week 2016</string>
    <string name="greek_extra">You will get an extras bonus x3 on the points earned by shopping during the next 12 hours from the time you can scan the code</string>
    <string name="frash_salad">Enjoy our Fresh Salads</string>
    <string name="menu">MENU</string>
    <string name="custom">CUSTOM</string>
    <string name="addtocart">ADD TO CART</string>
    <string name="suv_mar">Suvlas Marbella</string>
    <string name="min_driv">10 Minute Drive</string>
    <string name="ready">Ready in 12-15 Minutes</string>
    <string name="park">Park Yeero</string>
    <string name="combo">COMBO-Papas+Soda \nSpicy Yogurt extra</string>
    <string name="coca">Coca-Cola</string>
    <string name="apply">Apply 215 Suvlas points for a reward</string>
    <string name="aply">Apply</string>
    <string name="greek">Greek Week 2016 Gala dinner</string>
    <string name="checkout">Checkout</string>
    <string name="item_deta">ITEMDETAILS</string>
    <string name="order_detail">Order datails</string>
    <string name="spicy">Spicy yogurt extr</string>
    <string name="add_item">Add Item</string>
    <string name="place_order">Place Order</string>
    <string name="offer">OFFERS</string>
    <string name="birth_reward">Birthday Reward Available</string>
    <string name="seemore">See more</string>
    <string name="balance_title">BALANCE</string>
    <string name="enter_name">Please Enter Username</string>
    <string name="enter_pass">Please Enter Password</string>
    <string name="enter_confirm_pass">Please Enter Confirm Password</string>
    <string name="match_confirm_pass">Confirm Password don\'t match</string>
    <string name="enter_email">Please Enter Email Id</string>
    <string name="enter_date">Please select Date of Birth</string>
    <string name="enter_gender">Please Enter Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="allow_location">Allow your location</string>
    <string name="not_validdate">Not a valid date</string>
    <string name="location_permission">Location permission is necessary to sign up</string>
    <string name="dont_internet">You dont have internet connection.</string>
    <string name="number_point">PUNTOS</string>
    <string name="new_order">New order</string>
    <string name="occian_date">Occasion Date :</string>
    <string name="offer_code">Offer Code :</string>
    <string name="forgate_pass"><u>Forgot Password? Click Here</u></string>
    <string name="rta_dialog_title">Rate this app</string>
    <string name="rta_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? Thank you for your support!</string>
    <string name="rta_dialog_ok">Rate now</string>
    <string name="rta_dialog_cancel">Later</string>
    <string name="rta_dialog_no">No, thanks</string>
    <string name="favouritestore_error">Please Select Valid Store</string>
    <string name="favourite_location">Favourite Location</string>
    <string name="save_Setting">Save</string>
    <string name="yes_setting">YES</string>
    <string name="no_Setting">NO</string>
    <string name="register_confirm">Confirm password</string>
    <string name="menu_continue">Continue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="suvlasorder">SUVLAS ORDER</string>
    <string name="pick_up">Pick - up</string>
    <string name="delivery">Delivery</string>
    <string name="order_resume">ORDER RESUME</string>
    <string name="resume_order_item">ITEM</string>
    <string name="resume_order_qty">QTY</string>
    <string name="resume_order_price">PRICE</string>
    <string name="order_resume_pick_up">Pick-up</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="shipping_charge">Shipping charge</string>
    <string name="wallet_amount">wallet Amount</string>
    <string name="redeem_point">Redeem point</string>
    <string name="total">TOTAL</string>
    <string name="apply_offer">Apply</string>
    <string name="feedback">Feedback</string>
    <string name="shareapp">Share this App</string>
    <string name="rateapp">Rate this App</string>
    <string name="write_feedback">Write Feedback</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="add_order">Add to order</string>
    <string name="suvlas_store">SUVLAS | Locations</string>
    <string name="point">POINTS</string>
    <string name="select_amount">Please Select Amount</string>
    <string name="enter_cardholder_name">Please Enter Cardholder Name</string>
    <string name="enter_card_number">Please Enter Card Number</string>
    <string name="enter_cvv">Please Enter CVV/CVV2 Number</string>
    <string name="enter_expiry">Please Enter Expiry Date</string>
    <string name="enter_valid_expiry">Please Enter Valid Expiry Date</string>
    <string name="nodata">No Data Found</string>
    <string name="total_amount">Total Amount</string>
    <string name="logout_text">Are you sure you want to Logout?</string>
    <string name="ok">OK</string>
</resources>