<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded_corner_feedback">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_feedback_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/feedback_dialog">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/white"/>
        </LinearLayout>
        <EditText
            android:layout_below="@+id/linear_feedback_dialog"
            android:id="@+id/edt_feedback"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:textColor="@color/black"
            android:textColorHint="@color/nonactivetab"
            android:hint="@string/write_feedback"
            android:padding="5dp"
            android:background="@android:color/transparent"/>


        <LinearLayout
            android:layout_below="@+id/edt_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:gravity="center"
                android:background="@color/feedback_dialog"
                android:padding="10dp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/txt_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:gravity="center"
                android:background="@color/feedback_dialog"
                android:padding="10dp"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
    </RelativeLayout>





</LinearLayout>
