<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.suvlas.PaymentActivity"
    android:background="@color/loginbtn"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relative_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/img_back_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/txt_goldstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/transaction"
            android:textColor="@color/loginbg"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/img_back"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/toolbar_view" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_scnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_creditcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/ceditard"
            android:textColor="@color/loginbg" />

        <EditText
            android:id="@+id/edt_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_creditcard"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_whitebg"
            android:hint="@string/cardholdername"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="14dp" />

        <LinearLayout
            android:id="@+id/relative_scnd2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_card"
            android:orientation="horizontal"
            android:weightSum="3">

            <EditText
                android:id="@+id/cardnumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="2"
                android:background="@drawable/edit_whitebg"
                android:hint="@string/edt_cardnumber"
                android:inputType="number"
                android:paddingBottom="12dp"
                android:digits=" 1234567890"
                android:maxLength="19"
                android:paddingTop="12dp"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/securitycode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/edit_whitebg"
                android:hint="@string/securitycode"
                android:maxLines="1"
                android:inputType="numberPassword"
                android:maxLength="3"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:textSize="14dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_third"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/relative_scnd2"
            android:weightSum="2">

            <EditText
                android:id="@+id/expirationdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/edit_whitebg"
                android:hint="@string/exp_date"
                android:paddingBottom="12dp"
                android:inputType="date"
                android:paddingTop="12dp"
                android:textSize="14dp"
                android:focusable="false"/>

            <EditText
                android:id="@+id/year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/edit_whitebg"
                android:hint="@string/year"
                android:maxLines="1"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:textSize="14dp"
                android:visibility="gone"/>

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_procced"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:padding="12dp">

        <TextView
            android:id="@+id/txt_procced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/procced"
            android:textColor="@color/loginbtn" />
    </RelativeLayout>
</LinearLayout>
