<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginbg">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <VideoView
            android:id="@+id/videoview_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true" />

    <!--<VideoView-->
        <!--android:id="@+id/videoview_sign"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:layout_centerVertical="true" />-->

    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/txt_fill_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="25dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/edt_login_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_background"
                    android:gravity="left"
                    android:hint="@string/user"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/logintext"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:imeOptions="actionNext"/>

                <EditText
                    android:id="@+id/edt_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_background"
                    android:gravity="left"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/logintext"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />
                <EditText
                    android:id="@+id/edt_confirm_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_background"
                    android:gravity="left"
                    android:hint="@string/confirmpass"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/logintext"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:visibility="visible"/>

                <EditText
                    android:id="@+id/edt_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_background"
                    android:gravity="left"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/logintext"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>
                <EditText
                    android:id="@+id/edt_login_birthdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_background"
                    android:gravity="left"
                    android:focusable="false"
                    android:hint="@string/datebirth"
                    android:inputType="date"
                    android:maxLines="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/logintext"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>
                <EditText
                    android:id="@+id/edt_login_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_background"
                    android:focusable="false"
                    android:gravity="left"
                    android:hint="@string/gender"
                    android:maxLines="1"
                    android:paddingBottom="10dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/logintext"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>

                <Spinner
                    android:id="@+id/spinner_signup_favouritelocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_background"
                    android:focusable="false"
                    android:gravity="left"
                    android:maxLines="1"
                    android:paddingBottom="10dp"
                    android:textColor="@color/logintext"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rel_registration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/loginbtn"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/txt_loggedin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/next"
                        android:textColor="@color/sub_btn_text" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/txt_back_to_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/backtosign"
                    android:textColor="@color/loginbtn"
                    android:textSize="13dp"/>

            </LinearLayout>
        </LinearLayout>

    <!--</ScrollView>-->

    <!--</VideoView>-->
    </RelativeLayout>
</RelativeLayout>
